<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="match_parent"
    />


    <android.support.constraint.ConstraintLayout
            app:layout_constraintEnd_toStartOf="@id/menu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="0dp"
            android:id="@+id/navigate"
            android:paddingTop="@dimen/_dp_18"
            android:layout_margin="@dimen/_dp_24"
            android:background="@drawable/shape_saveandupdate"
            android:paddingBottom="@dimen/_dp_18"
            android:layout_height="wrap_content">

        <ImageView
                app:layout_constraintBottom_toBottomOf="@id/t"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/buttonlogo"
                app:layout_constraintTop_toTopOf="@id/t"
                android:id="@+id/l"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintEnd_toStartOf="@id/t"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo"/>

                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          app:layout_constraintStart_toEndOf="@id/l"
                          android:id="@+id/t"
                          android:layout_marginStart="@dimen/_dp_14"
                          app:layout_constraintEnd_toEndOf="parent"
                          android:text="@string/begin_navigation"
                          android:textColor="@color/white"
                          app:layout_constraintTop_toTopOf="@id/l"
                          android:layout_marginLeft="@dimen/_dp_14"/>

            </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.FloatingActionButton
            android:layout_width="@dimen/_dp_52"
            android:layout_height="@dimen/_dp_52"
            android:backgroundTint="@color/slate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="@dimen/_dp_24"
            android:src="@drawable/ic_menu"
            android:id="@+id/menu"
    />

    <android.support.v7.widget.CardView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:android="http://schemas.android.com/apk/res/android"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            app:cardBackgroundColor="@color/white"
            android:layout_margin="@dimen/standard_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardElevation="@dimen/dp_4"
            app:cardCornerRadius="@dimen/dp_12"
            android:layout_height="wrap_content"
            android:id="@+id/cardView2">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pickup_area"
                    android:textColor="@color/slate"
                    android:textSize="@dimen/sp_12"
                    android:drawablePadding="20dp"
                    android:drawableLeft="@drawable/ic_filled_circle"
                    android:fontFamily="@font/sforegular"
                    android:id="@+id/textPickUpAreaLabel"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginEnd="@dimen/_dp_8"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="@dimen/standard_40"
                    app:layout_constraintHorizontal_bias="0.0"
                    android:layout_marginTop="@dimen/standard_16"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="@dimen/standard_40" android:drawableStart="@drawable/ic_filled_circle"
                    tools:ignore="UnusedAttribute" android:layout_marginRight="@dimen/_dp_8"/>


            <TextView
                    android:paddingLeft="@dimen/standard_20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/green_park"
                    android:textColor="@color/colorBlack200"
                    android:textSize="@dimen/sp_16"
                    android:fontFamily="@font/sforegular"
                    android:id="@+id/textPickUpArea"
                    android:layout_marginStart="@dimen/_dp_8"
                    android:layout_marginEnd="@dimen/_dp_8"
                   app:layout_constraintTop_toBottomOf="@+id/textPickUpAreaLabel"
                    app:layout_constraintStart_toStartOf="@+id/textPickUpAreaLabel"
                    tools:ignore="UnusedAttribute"/>


            <com.example.scmmap2.DottedLineView
                    android:layout_width="12dp"
                    android:layout_height="0dp"
                    app:radius="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    app:minGap="4dp"
                    app:color="#979393"
                    android:id="@+id/dottedLineView"
                    app:layout_constraintBottom_toTopOf="@+id/textAppointmentAreaLabel"
                    app:layout_constraintTop_toBottomOf="@+id/textPickUpAreaLabel"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="38dp"
                    android:layout_marginLeft="38dp"/>

            <View android:layout_width="0dp"
                  android:layout_height="1dp"
                  android:background="@color/verticalviewcolor"
                  app:layout_constraintEnd_toEndOf="parent"
                  android:layout_marginEnd="32dp"
                  app:layout_constraintTop_toBottomOf="@+id/textPickUpArea" android:layout_marginTop="16dp"
                  app:layout_constraintStart_toStartOf="@+id/textPickUpAreaLabel" android:id="@+id/view2"
                  android:layout_marginRight="32dp"
                  android:layout_marginLeft="@dimen/standard_28"
                  android:layout_marginStart="16dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/appointment_area"
                    android:textColor="@color/slate"
                    android:textSize="@dimen/sp_12"
                    android:layout_marginTop="16dp"
                    android:drawablePadding="@dimen/standard_20"
                    android:drawableLeft="@drawable/ic_filled_circle"
                    android:fontFamily="@font/sforegular"
                    android:id="@+id/textAppointmentAreaLabel"
                    android:layout_marginEnd="@dimen/_dp_8"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="@dimen/standard_40"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view2"
                    android:layout_marginRight="@dimen/_dp_8"
                    android:layout_marginLeft="@dimen/standard_40" tools:ignore="UnusedAttribute"
                    android:drawableStart="@drawable/ic_filled_circle"/>


            <TextView
                    android:paddingLeft="@dimen/standard_20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/old_rajinder_nagar"
                    android:textColor="@color/colorBlack200"
                    android:textSize="@dimen/sp_16"
                    android:fontFamily="@font/sforegular"
                    android:id="@+id/textAppointmentArea"
                    android:layout_marginEnd="@dimen/_dp_8"
                    app:layout_constraintTop_toBottomOf="@+id/textAppointmentAreaLabel"
                    android:layout_marginBottom="@dimen/standard_16"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textPickUpArea"
                    android:layout_marginRight="@dimen/_dp_8" tools:ignore="UnusedAttribute"
                    android:paddingStart="@dimen/standard_20"/>

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>